--- a/css/style.css
+++ b/css/style.css
@@ -464,6 +464,7 @@ iframe {
 
 /* Callback dealer section */
 .callback-dealer-section .callback-dealer {
+  position: relative;
   padding: 60px;
   background-color: var(--lightgrey-color);
   border-radius: 30px;;
@@ -3070,12 +3071,61 @@ iframe {
   .page-title,
   .section-title {
     margin-bottom: 20px;
-    font-size: 48px;
+    font-size: 44px;
+  }
+
+  /* Header */
+  .header {
+    padding: 20px 0;
+  }
+  .header .flex-container {
+    align-items: flex-start;
+  }
+  .header .catalog-btn {
+    width: 160px;
+    height: 45px;
+    gap: 10px;
+  }
+  .header .search-form .search-input {
+    height: 45px;
+    padding: 12px 15px;
+  }
+  .header .search-form .search-submit-btn {
+    width: 45px;
+    height: 45px;
+  }
+  .header .header-contacts .tp-item {
+    width: 45px;
+    height: 45px;
+  }
+  .header .top-menu {
+    gap: 10px 24px;
+    flex-wrap: wrap;   
+    justify-content: flex-start;
+  }
+
+  /* Main section */
+  .main-section .main-banner {
+    height: 300px;
+    padding: 30px 40px;
+  }
+  .main-section .main-banner-title {
+    font-size: 34px;
+  }
+  .main-section .main-banner-subtitle {
+    font-size: 18px;
+  }
+  .main-section .catalog-btn {
+    width: 250px;
+    height: 45px;
+  }
+  .main-section .catalog-btn .catalog-btn__text {
+    font-size: 18px;
   }
 
   /* About section */
   .about-section .about-description {
-    font-size: 26px;
+    font-size: 24px;
   }
   .about-section .about-info {
     gap: 10px;
@@ -3088,6 +3138,13 @@ iframe {
   }
   .about-section .about-info .about-rectangle .about-rectangle__title {
     font-size: 18px;
+  }
+  .about-section .about-btn {
+    width: 200px;
+    height: 45px;
+  }
+  .about-section .about-btn .about-btn__text {
+    font-size: 20px;
   }
 
   /* Category section Categories Home page and Catalog page */
@@ -3107,9 +3164,17 @@ iframe {
     height: 120px;
   }
 
+  /* Complex solutions section */
+  .complex-solutions-section .solutions {
+    gap: 8px 0;
+  }
+  .complex-solutions-section .solutions-item {
+    height: 300px;
+  }
+
   /* Callback dealer section */
   .callback-dealer-section .callback-dealer {
-    padding: 25px 25px;
+    padding: 25px;
   }
   .callback-dealer-section .callback-dealer-image {
     display: none;
@@ -3121,6 +3186,9 @@ iframe {
     margin-bottom: 30px;
     font-size: 16px;
   }
+  .callback-dealer-section .callback-dealer-form .mb-40 {
+    margin: 0 0 20px 0;
+  }
   .callback-dealer-section .callback-dealer-form .callback-dealer-btn {
     height: 50px;
   }
@@ -3129,6 +3197,32 @@ iframe {
   }
   .callback-dealer-section .callback-dealer-form .input-field {
     height: 45px;
+  }
+
+  /* News section Home page and News page */
+  .news-section .news {
+    gap: 24px 16px;
+  }
+  .news-section .news-item .news-item__type {
+    display: none;
+  }
+  .news-section .news-item .news-item__date {
+    width: 110px;
+    height: 30px;
+  }
+  .news-section .news-item .news-item__btn {
+    width: 180px;
+    height: 40px;
+  }
+  .news-section .news-item .news-item__btn .news-item__text {
+    font-size: 14px;
+  }
+  .news-section .news-item .news-item__content {
+    margin-bottom: 15px;
+  }
+  .news-section .news-item .news-item__title {
+    height: 39px;
+    font-size: 16px;
   }
 
   /* agreement text галочка соглашения */
@@ -3141,6 +3235,37 @@ iframe {
     gap: 16px;
     grid-template-columns: repeat(2, 1fr);
   }
+
+  /* footer */
+  .footer {
+    padding: 50px 0 30px 0;
+    border-radius: 20px 20px 0 0;
+  }
+  .footer .logo {
+    width: 110px;
+  }
+  .footer .socials .socials-item {
+    width: 66px;
+    height: 40px;
+  }
+  .footer .footer-menu .address-wrapper .phone,
+  .footer .footer-menu .address-wrapper .address {
+    font-size: 20px;
+  }
+  .footer .footer-menu .menu {
+    width: 21%;
+  }
+  .footer .footer-text {
+    display: block;
+  }
+  .footer .footer-text .text {
+    width: 100%;
+    margin: 0 0 20px 0;
+  }
+  .footer .footer-text .required-links .link {
+    margin-left: 0;
+  }
+
 
   /* to top */
   .to-top {
@@ -3158,6 +3283,106 @@ iframe {
     display: block;
   }
 
+  .page-title,
+  .section-title {
+    font-size: 40px;
+  }
+
+  /* Header */
+  .header .flex-container {
+    display: block;
+    border-bottom: none;
+    padding: 0;
+  }
+  .header .logo {
+    width: 130px;
+    height: 67px;
+    margin: 0 0 30px 0;
+  }
+  .header .search-form .search-input {
+    height: 50px;
+  }
+
+  /* Main section */
+  .main-section .main-banner {
+    padding: 25px 30px;
+  }
+  .main-section .main-banner-title {
+    font-size: 32px;
+  }
+  .main-section .catalog-btn .catalog-btn__text {
+    font-size: 16px;
+  }
+
+  /* About section */
+  .about-section .grid-container {
+    display: block;
+  }
+  .about-section .about-description {
+    margin: 0 0 30px 0;
+    font-size: 22px;
+  }
+
+  /* Category section Categories Home page and Catalog page */
+  .category-section .categories-item {
+    height: 240px;
+  }
+
+  /* Brands section */
+  .brands-section .brands {
+    padding: 20px;
+  }
+  .brands-section .brands-item {
+    height: 90px;
+  }
+
+  /* Complex solutions section */
+  .complex-solutions-section .solutions {
+    flex-direction: column;
+  }
+  .complex-solutions-section .solutions-item {
+    width: 100%;
+    height: 270px;
+  }
+
+  /* Callback dealer section */
+  .callback-dealer-section .callback-dealer {
+    height: 565px;
+  }
+  .callback-dealer-section .callback-dealer-form .form-flex-container {
+    display: block;
+  }
+  .callback-dealer-section .callback-dealer-form .left {
+    width: 100%;
+  }
+  .callback-dealer-section .callback-dealer-form .callback-dealer-btn {
+    position: absolute;
+    bottom: 25px;
+    left: 25px;
+    right: 25px;
+    width: auto;
+    height: 45px;
+  }
+
+  /* News section Home page and News page */
+  .news-section .news-section-slider {
+    margin-left: calc(50% - 516px / 2);
+  }
+  .news-section .swiper-slide {
+    width: 80%;
+  }
+  .news-section .news-item .news-item__content {
+    height: 220px;
+  }
+
+  /* Events section */
+  .events-section .events-section-slider {
+    margin-left: calc(50% - 516px / 2);
+  }
+  .events-section .swiper-slide {
+    width: 80%;
+  }
+
 
   /* we use cookie */
   .we-use-cookie .we-use-cookie-wrapper {
@@ -3171,6 +3396,15 @@ iframe {
 
 @media only screen and (max-width : 576px) {
 
+  /* News section Home page and News page */
+  .news-section .news-section-slider {
+    margin-left: 12px;
+  }
+
+  /* Events section */
+  .events-section .events-section-slider {
+    margin-left: 12px;
+  }
 }
 
 @media only screen and (max-width : 480px) {
